<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_launcher_name">Contacts</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="neighborhood">Appartment or suite number</string>
    <string name="city">City</string>
    <string name="postcode">Postal code</string>
    <string name="pobox">Post office box</string>
    <string name="region">State</string>
    <string name="country">Country</string>
    <string name="inserting">Inserting…</string>
    <string name="updating">Updating…</string>
    <string name="phone_storage">Phone storage</string>
    <string name="phone_storage_hidden">Phone storage (not visible by other apps)</string>
    <string name="company">Company</string>
    <string name="job_position">Job position</string>
    <string name="send_sms_to_contacts">Send SMS to contacts</string>
    <string name="send_email_to_contacts">Send email to contacts</string>
    <string name="send_sms_to_group">Send SMS to group</string>
    <string name="send_email_to_group">Send email to group</string>
    <string name="fields_empty">At least 1 field has to be filled out</string>
    <string name="must_be_at_edit">You must be at the Edit screen to modify a contact</string>

    <!-- Placeholders -->
    <string name="no_contacts_with_emails">No contacts with emails have been found</string>
    <string name="no_contacts_with_phone_numbers">No contacts with phone numbers have been found</string>

    <string name="new_contact">New contact</string>
    <string name="select_contact">Select contact</string>
    <string name="nickname">Nickname</string>
    <string name="select_account">Select account</string>

    <!-- Groups -->
    <string name="no_groups">No groups</string>
    <string name="create_new_group">Create a new group</string>
    <string name="remove_from_group">Remove from group</string>
    <string name="no_group_participants">This group is empty</string>
    <string name="add_contacts">Add contacts</string>
    <string name="no_group_created">There are no contact groups on the device</string>
    <string name="create_group">Create group</string>
    <string name="add_to_group">Add to group</string>
    <string name="create_group_under_account">Create group under account</string>

    <!-- Photo -->
    <string name="remove_photo">Remove photo</string>
    <string name="change_photo">Change photo</string>

    <!-- Settings -->
    <string name="show_phone_numbers">Show phone numbers</string>
    <string name="show_contact_thumbnails">Show contact thumbnails</string>
    <string name="format_phone_numbers">Format phone numbers</string>
    <string name="show_dialpad_button">Show a dialpad button on the main screen</string>
    <string name="manage_shown_contact_fields">Manage shown contact fields</string>
    <string name="contacts">Contacts</string>
    <string name="show_only_contacts_with_numbers">Show only contacts with phone numbers</string>
    <string name="show_private_contacts">Show private contacts to Fossify Phone, Messages, and Calendar</string>
    <string name="merge_duplicate_contacts">Merge duplicate contacts</string>

    <!-- Favorites -->
    <string name="no_favorites">Seems like you haven\'t added any favorite contacts yet.</string>
    <string name="toggle_favorite">Toggle favorite</string>

    <!-- Search -->
    <string name="search_contacts">Search contacts</string>
    <string name="search_favorites">Search favorites</string>
    <string name="search_groups">Search groups</string>

    <!-- Export / Import -->
    <string name="import_contacts">Import contacts</string>
    <string name="export_contacts">Export contacts</string>
    <string name="import_contacts_from_vcf">Import contacts from a .vcf file</string>
    <string name="import_contacts_from_vcf_pro">Import contacts from a .vcf file (Pro)</string>
    <string name="export_contacts_to_vcf">Export contacts to a .vcf file</string>
    <string name="target_contact_source">Target contact source</string>
    <string name="include_contact_sources">Include contact sources</string>
    <string name="filename_without_vcf">Filename (without .vcf)</string>

    <!-- Dialpad -->
    <string name="dialpad">Dialpad</string>
    <string name="add_number_to_contact">Add number to contact</string>

    <!-- Visible fields -->
    <string name="prefix">Prefix</string>
    <string name="suffix">Suffix</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="emails">Emails</string>
    <string name="addresses">Addresses</string>
    <string name="structured_addresses">Structured addresses (edit mode)</string>
    <string name="events">Events (birthdays, anniversaries)</string>
    <string name="organization">Organization</string>
    <string name="websites">Websites</string>
    <string name="groups">Groups</string>
    <string name="contact_source">Contact source</string>
    <string name="instant_messaging">Instant messaging (IM)</string>
    <string name="ringtone">Ringtone</string>

    <!-- Confirmation dialog -->
    <string name="delete_from_all_sources">The contact will be removed from all contact sources.</string>

    <plurals name="delete_groups">
        <item quantity="one">%d group</item>
        <item quantity="other">%d groups</item>
    </plurals>

    <!-- FAQ -->
    <string name="faq_1_title">I want to change what fields are visible at contacts. Can I do it?</string>
    <string name="faq_1_text">Yes, all you have to do is go in Settings -> Manage shown contact fields. There you can select what fields should be visible. Some of them are even disabled by default, so you might find some new ones there.</string>
    <!-- Urgency -->
    <string name="urgency">Urgency</string>
    <string name="urgency_status">Urgency status</string>
    <string name="days_since_contact">%d days since last contact</string>
    <string name="no_interaction_history">No interaction history</string>
    <string name="mark_as_contacted">Mark as Contacted</string>
    <string name="contact_marked">Contact marked as contacted</string>
    <string name="urgency_green_label">Recent</string>
    <string name="urgency_yellow_label">Due soon</string>
    <string name="urgency_orange_label">Overdue</string>
    <string name="urgency_red_label">Needs attention</string>

    <!-- Urgency Settings -->
    <string name="urgency_settings">Urgency settings</string>
    <string name="default_urgency_thresholds">Default urgency thresholds</string>
    <string name="configure_urgency">Configure urgency</string>
    <string name="configure_contact_urgency">Configure contact urgency</string>
    <string name="configure_group_urgency">Configure group urgency</string>
    <string name="urgency_green_days">Green threshold (days)</string>
    <string name="urgency_yellow_days">Yellow threshold (days)</string>
    <string name="urgency_orange_days">Orange threshold (days)</string>
    <string name="urgency_red_days">Red threshold (days)</string>
    <string name="urgency_tracking_enabled">Urgency tracking enabled</string>
    <string name="urgency_values_must_be_positive">All values must be positive numbers</string>
    <string name="urgency_values_must_increase">Thresholds must be in increasing order</string>
    <string name="urgency_settings_saved">Urgency settings saved</string>

    <!--
        Haven't found some strings? There's more at
        https://github.com/FossifyOrg/Commons/tree/master/commons/src/main/res
    -->
</resources>
