<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    android:paddingEnd="@dimen/activity_margin">

    <org.fossify.commons.views.MyTextInputLayout
        android:id="@+id/urgency_green_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/urgency_green_days">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/urgency_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/bigger_text_size" />

    </org.fossify.commons.views.MyTextInputLayout>

    <org.fossify.commons.views.MyTextInputLayout
        android:id="@+id/urgency_yellow_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:hint="@string/urgency_yellow_days">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/urgency_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/bigger_text_size" />

    </org.fossify.commons.views.MyTextInputLayout>

    <org.fossify.commons.views.MyTextInputLayout
        android:id="@+id/urgency_orange_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:hint="@string/urgency_orange_days">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/urgency_orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/bigger_text_size" />

    </org.fossify.commons.views.MyTextInputLayout>

    <org.fossify.commons.views.MyTextInputLayout
        android:id="@+id/urgency_red_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:hint="@string/urgency_red_days">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/urgency_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/bigger_text_size" />

    </org.fossify.commons.views.MyTextInputLayout>

    <RelativeLayout
        android:id="@+id/urgency_enabled_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:visibility="gone">

        <org.fossify.commons.views.MyMaterialSwitch
            android:id="@+id/urgency_enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/urgency_tracking_enabled" />

    </RelativeLayout>

</LinearLayout>
